--- a/Lesson2/app/src/main/AndroidManifest.xml
+++ b/Lesson2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.a65apps.l2T45S7E9.lesson2">
+    package="com.gmail.l2t45s7e9.lesson1">
 
     <application
         android:allowBackup="true"
