--- a/Lesson1/app/src/main/AndroidManifest.xml
+++ b/Lesson1/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".ContactService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
